Simplify set of
Co-authored-by: Jacob Laursen <jacob-github@vindvejr.dk>
Signed-off-by: James Melville <jamesmelville@gmail.com>